--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,25 @@
-# Compiled class file
-*.class
+.gradle
+.DS_STORE
+**/build/
+!src/**/build/
+build/
+bin/
 
-# Log file
-*.log
+# Ignore Gradle GUI config
+gradle-app.setting
 
-# BlueJ files
-*.ctxt
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Avoid ignore Gradle wrappper properties
+!gradle-wrapper.properties
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Cache of project
+.gradletasknamecache
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Eclipse Gradle plugin generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+HyperWrite Logo
