Added Concentrated Weapon and Armor Stones for Higher lvl Enhancements
Added Concentrated Weapon and Armor stones which must be used to enhance level 16 (PRI) - 20 (PEN)

Also added these stones to the give commands

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,7 +11,7 @@ commands:
     usage: /enhance
   giveblackstone:
     description: Gives the player a specified amount of Black Stones
-    usage: /giveblackstone <weapon|armor> <amount>
+    usage: /giveblackstone <weapon|armor|cweapon|carmor> <amount>
   reloadconfig:
     description: Reloads the plugin's config.yml
     usage: /reloadconfig
