Enhance Rework for Memory Fragments & Durability Loss
- Added memory fragment to give command, usage "/give PLAYER memoryfragment AMOUNT"

- Added memory fragments drop chance upon mining blocks (configurable)

- Added "/erepair" command that uses memory fragments to repair the held enhanced item, consuming them

- Items that fail enhance now have their durability reduced by 10% every time. Although they cannot break from this, they do get reduce to 1/MAX_DURABILITY

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Enhancing
-version: 1.3.0
+version: 1.4.0
 main: com.obotach.enhancer.Enhancing
 description: Yes, it's a plugin that enhances items!
 author: Oze Botach
@@ -19,6 +19,10 @@ commands:
     usage: /<command> <level>
     permission: enhancing.enhanceitem
   protectionshop:
+    description: Reloads the plugin's config.yml
+    usage: /protectionshop
+    # permission: enhancing.reloadconfig
+  erepair:
     description: Reloads the plugin's config.yml
     usage: /protectionshop
     # permission: enhancing.reloadconfig
